--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,10 @@
     "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.29"
+    "mongoose": "^5.9.29",
+    "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.2"
   }
 }
