--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js"
+    "start": "node index.js",
+    "dev": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js"
   },
   "repository": {
     "type": "git",
@@ -31,5 +32,8 @@
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
+  },
+  "engines": {
+    "node": ">=10.13.0"
   }
 }
