--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node --max-http-header-size=16384 index.js",
     "dev": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js"
   },
   "repository": {
